# MS-Agent

./: .gitignore  README.md  REFACTORING_PLAN.md  build.bat
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/plugins/siyuan-plugin-text-process/: README.md  README_zh_CN.md  index.js  plugin.json
frontend/plugins/siyuan-plugin-text-process/i18n/: en_US.json  zh_CN.json
frontend/src/: App.css  App.tsx  config.ts  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AgentMessageBubble.tsx  BgTransition.tsx  ChangelogPanel.tsx  ColorPicker.tsx  CompanionPanel.tsx  ErrorBoundary.tsx  HtmlPreview.tsx  ImportDialog.tsx  InputBar.tsx  LgGlassButton.tsx  LgGlassCard.tsx  LgGlassFilter.tsx  LgGlassInteractive.tsx  LgGlassMask.tsx  LgMaskOverlay.tsx  MediaLibraryPanel.tsx  MermaidDiagram.tsx  MessageBubble.tsx  MessageContentSegments.tsx  MusicPlayer.tsx  PresetSelector.tsx  SessionList.tsx  SettingsPanel.tsx  SplashScreen.tsx  StatusBar.tsx  ThinkingIndicator.tsx  ToolSelector.tsx  WelcomeScreen.tsx
frontend/src/components/music/: MusicCapsule.tsx  MusicLyrics.tsx  MusicPlaylist.tsx  waveform.ts
frontend/src/components/presets/: PresetForm.tsx  PresetList.tsx
frontend/src/components/settings/: BackgroundSettings.tsx  BubbleColorSettings.tsx  CompanionSettings.tsx  InterfaceSettings.tsx  LiquidGlassSettings.tsx
frontend/src/components/tools/: ParamInput.tsx  toolParamUtils.ts
frontend/src/hooks/: useAudioAnalyser.ts  useBackground.ts  useChat.ts  useLyrics.ts  useMediaLibrary.ts  useMediaToolHandler.ts  useMusic.ts  usePlaylist.ts  usePreset.ts  useSession.ts  useSettings.ts  useVideoBackground.ts  useVideoDominantColor.ts
frontend/src/styles/: _background.css  _input.css  _markdown.css  _media.css  _messages.css  _music.css  _sessions.css  _settings.css  _status-bar.css  _thinking.css  _tools.css  _welcome.css
frontend/src/utils/: bgStorage.ts  clipboard.ts  lrcParser.ts  lyricsFetcher.ts  mediaLibraryStorage.ts  renderContent.ts  sanitizer.ts  storage.ts
main-sub-agent-system/: .dockerignore  Cargo.toml  Dockerfile  README.md  _unified_chain.txt  cargo_log.txt  clippy_err.txt  clippy_output.txt  config.json  docker-compose.yml  python_search_result.md  rust_search_results.json
main-sub-agent-system/agents/: Cargo.toml
main-sub-agent-system/agents/src/: agent_factory.rs  change_detector.rs  decision_store.rs  domain_cs.rs  extractor.rs  lib.rs  main_agent.rs  prompt.rs  quality.rs  response_agent.rs  task_planner_prompt.rs  tool_engine.rs  tool_param_infer.rs
main-sub-agent-system/agents/src/sub_agents/: knowledge.rs  mod.rs  script_exec.rs  sentiment.rs  task_planner.rs  tool_agent.rs
main-sub-agent-system/agents/src/sub_agents/summary/: chain_optimizer.rs  global_summary.rs  mod.rs  quality_inspector.rs
main-sub-agent-system/agents/src/tests/: mod.rs  new_architecture_tests.rs
main-sub-agent-system/agents/src/tool_discovery/: mcp.rs  mod.rs  openapi.rs
main-sub-agent-system/agents/src/tool_engine/: mod.rs
main-sub-agent-system/agents/src/tools/: datetime.rs  docflow.rs  docreader.rs  file.rs  http.rs  media.rs  mod.rs  web_search.rs  xxt.rs
main-sub-agent-system/coordinator/: Cargo.toml
main-sub-agent-system/coordinator/src/: aggregator.rs  bus_dispatcher.rs  cache.rs  cache_metrics.rs  compression_evaluator.rs  critic.rs  fanout.rs  lib.rs  main_coordinator.rs  memory_context_provider.rs  memory_helpers.rs  memory_manager.rs  memory_metrics.rs  orchestrator.rs  plan_cache.rs  plan_executor.rs  state_applier.rs  sub_agent_cache.rs  summary_background.rs  synthesizer.rs  unified_cache_manager.rs
main-sub-agent-system/core/: Cargo.toml
main-sub-agent-system/core/src/: agent_memory_cache.rs  boxed_agent.rs  bus.rs  companion.rs  config.rs  context.rs  context_provider.rs  dedup_engine.rs  domain.rs  effect.rs  error.rs  event.rs  hash.rs  hook.rs  lib.rs  memory.rs  memory_event_bus.rs  memory_intent.rs  memory_lifecycle.rs  memory_reranker.rs  memory_store.rs  message.rs  pipeline.rs  plan.rs  processor.rs  provider.rs  registry.rs  routing.rs  state.rs  sub_agent.rs  tag_extractor.rs  tool.rs  tool_cache.rs  tool_engine.rs  tool_param_infer.rs  unified_cache_manager.rs  unified_memory_bus.rs
main-sub-agent-system/examples/: system_instructions.rs
main-sub-agent-system/examples/toolkit-demo/: Cargo.toml
main-sub-agent-system/examples/toolkit-demo/src/: main.rs
main-sub-agent-system/provider/: Cargo.toml
main-sub-agent-system/provider/src/: anthropic.rs  cached_embedding.rs  circuit_breaker.rs  embedding.rs  http_provider.rs  lib.rs  ollama.rs  openai.rs  openai_responses.rs  registry.rs  retry.rs  sse_buffer.rs  sse_buffer_responses.rs
main-sub-agent-system/runtime/: Cargo.toml
main-sub-agent-system/runtime/src/: events.rs  hot_reload.rs  http.rs  lib.rs  rate_limit.rs  runtime.rs  sessions.rs  telemetry.rs  validation.rs
main-sub-agent-system/storage/: Cargo.toml
main-sub-agent-system/storage/src/: lib.rs  memory.rs  redis.rs  redis_memory.rs
main-sub-agent-system/toolkit/: Cargo.toml
main-sub-agent-system/toolkit/src/: agent_loop.rs  lib.rs
main-sub-agent-system/tools/DocReader/: server.py  server.py.backup
main-sub-agent-system/tools/xxt/: auto_answer.py  description.txt  schema.json  test_crawl_fill.py  test_fill.py  test_fill_debug.py
tools_build/: auto_answer.spec  build_docflow.bat  build_docflow.py  build_docflow_embedded.bat  build_docflow_portable.bat  build_tools.bat  build_xxt.bat  build_xxt.py  docflow_server.spec
