[workspace]
members = [
    "core",
    "provider",
    "agents",
    "coordinator",
    "storage",
    "runtime",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.20", features = ["rt-tokio"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "deflate", "zstd", "multipart"] }
futures = "0.3"
tokio-stream = "0.1"
dashmap = "6"
lru = "0.12"
rand = "0.8"
regex = "1"
bytes = "1"
pin-project-lite = "0.2"
async-stream = "0.3"
secrecy = { version = "0.8", features = ["serde"] }
dotenvy = "0.15"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "json"] }
once_cell = "1"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
flate2 = "1"
encoding_rs = "0.8"
tempfile = "3"
