[package]
name = "agent-teams-agents"
version = "1.3.0"
edition = "2021"

[dependencies]
agent-core = { path = "../core" }
agent-llm = { path = "../provider" }
agent-toolkit = { path = "../toolkit" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true }
flate2 = { workspace = true }
encoding_rs = { workspace = true }
tempfile = { workspace = true }
