[package]
name = "agent-teams-coordinator"
version = "1.3.0"
edition = "2021"

[dependencies]
agent-teams-core = { path = "../core" }
agent-teams-provider = { path = "../provider" }
agent-teams-agents = { path = "../agents" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
lru = { workspace = true }
