[package]
name = "agent-teams-core"
version = "1.3.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
lru = { workspace = true }
pin-project-lite = { workspace = true }
regex = { workspace = true }
secrecy = { workspace = true }
utoipa = { workspace = true }
