[package]
name = "agent-llm"
version = "1.3.0"
edition = "2021"

[dependencies]
agent-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
bytes = "1"
pin-project-lite = { workspace = true }
rand = { workspace = true }
dashmap = { workspace = true }
secrecy = { workspace = true }
lru = { workspace = true }
