[package]
name = "agent-teams-storage"
version = "1.3.0"
edition = "2021"

[dependencies]
agent-teams-core = { path = "../core" }
agent-teams-provider = { path = "../provider" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
redis = { workspace = true }
uuid = { workspace = true }
