[package]
name = "agent-teams-storage"
version = "1.3.0"
edition = "2021"

[dependencies]
agent-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
redis = { workspace = true }
uuid = { workspace = true }
