[package]
name = "agent-toolkit"
version = "0.1.0"
edition = "2021"
description = "Reusable agent toolkit: tool execution engine + ReAct tool loop for LLM-powered tool calling"

[dependencies]
agent-core = { path = "../core" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
