[package]
name = "toolkit-demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# The only dependency you need — re-exports everything from agent-core
agent-toolkit = { path = "../../toolkit" }
# Optional: use the built-in OpenAI-compatible provider
agent-llm = { path = "../../provider" }

tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
